--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.10",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
